test/typeerrors/Examples/TypeBug3.hs
module TypeBug3 where

f = "hello" : map concat [[]]

